[gd_scene load_steps=2 format=3 uid="uid://d00b0ly2qowij"]

[ext_resource type="Script" uid="uid://7xa5a2313ghk" path="res://scripts/ui/BreedingPanel.gd" id="1_breeding"]

[node name="BreedingPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 322.0
offset_bottom = 180.0
script = ExtResource("1_breeding")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 319.0
offset_bottom = 180.0

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 10.0
offset_right = 370.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 18
text = "üêâ Dragon Breeding Lab"
horizontal_alignment = 1

[node name="ParentASlot" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 46.0
offset_right = 151.0
offset_bottom = 106.0
text = "Parent A:
[Click to Select]"

[node name="XLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 59.0
offset_right = 176.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 24
text = "√ó"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ParentBSlot" type="Button" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 46.0
offset_right = 316.0
offset_bottom = 106.0
text = "Parent B:
[Click to Select]"

[node name="BreedButton" type="Button" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 119.0
offset_right = 230.0
offset_bottom = 150.0
disabled = true
text = "ü•ö Breed!"

[node name="InstructionsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 150.0
offset_right = 317.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 12
text = "Click a dragon, then click 'Parent A' to select it"
horizontal_alignment = 1
